Additional memory tweaks and correction of parameter